# zkRegistry

./: .gitmodules  README.md  prep-contracts.sh
.github/workflows/: foundry.yml  noir.yml  rust.yml
circuits/batch_smt_op/: Nargo.toml  Prover.toml
circuits/batch_smt_op/src/: main.nr
circuits/single_smt_op/: Nargo.toml  Prover.toml
circuits/single_smt_op/src/: main.nr
client/: Cargo.toml
client/src/: main.rs
contracts/script/: OffchainRegistry.s.sol
contracts/src/: BaseUltraVerifier.sol  BatchSMTOpVerifier.sol  OffchainRegistry.sol  SingleSMTOpVerifier.sol
contracts/test/: OffchainRegistry.t.sol
server/: main.scm
server/zkreg/: aux.sld  eth.sld  smt.sld
